big changes (using pinecone, changing build)
